--- a/web/src/CatDogForm.module.css
+++ b/web/src/CatDogForm.module.css
@@ -77,13 +77,79 @@
     font-size: 40px;
 }
 
+
+@-webkit-keyframes bounce {
+
+    0%,
+    100% {
+        -webkit-transform: translateY(0);
+    }
+
+    50% {
+        -webkit-transform: translateY(-10px);
+    }
+}
+
+@-moz-keyframes bounce {
+
+    0%,
+    100% {
+        -moz-transform: translateY(0);
+    }
+
+    50% {
+        -moz-transform: translateY(-10px);
+    }
+}
+
+@-o-keyframes bounce {
+
+    0%,
+    100% {
+        -o-transform: translateY(0);
+    }
+
+    50% {
+        -o-transform: translateY(-10px);
+    }
+}
+
+@keyframes bounce {
+
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-10px);
+    }
+}
+
 .UnselectedButton {
     background-image: url("./assets/button-g.png");
 }
 
+
+.UnselectedButton:hover {
+    animation: bounce 0.5s infinite;
+    -webkit-animation: bounce 0.5s infinite;
+    -moz-animation: bounce 0.5s infinite;
+    -o-animation: bounce 0.5s infinite;
+}
+
+
 .SelectedButton {
     background-image: url("./assets/button-b.png");
 }
+
+.SelectedButton:hover {
+    animation: bounce 0.5s infinite;
+    -webkit-animation: bounce 0.5s infinite;
+    -moz-animation: bounce 0.5s infinite;
+    -o-animation: bounce 0.5s infinite;
+}
+
 
 .UnselectedButtonBig {
     background-image: url("./assets/button-g-big.png");
@@ -91,8 +157,22 @@
     height: 100px;
 }
 
+.UnselectedButtonBig:hover {
+    animation: bounce 0.5s infinite;
+    -webkit-animation: bounce 0.5s infinite;
+    -moz-animation: bounce 0.5s infinite;
+    -o-animation: bounce 0.5s infinite;
+}
+
 .SelectedButtonBig {
     background-image: url("./assets/button-b-big.png");
     width: 400px;
     height: 100px;
+}
+
+.SelectedButtonBig:hover {
+    animation: bounce 0.5s infinite;
+    -webkit-animation: bounce 0.5s infinite;
+    -moz-animation: bounce 0.5s infinite;
+    -o-animation: bounce 0.5s infinite;
 }
