--- a/web/src/FunForm.module.css
+++ b/web/src/FunForm.module.css
@@ -135,6 +135,71 @@
     background-image: url("./assets/button-o.png");
 }
 
+@-webkit-keyframes bounce {
+
+    0%,
+    100% {
+        -webkit-transform: translateY(0);
+    }
+
+    50% {
+        -webkit-transform: translateY(-10px);
+    }
+}
+
+@-moz-keyframes bounce {
+
+    0%,
+    100% {
+        -moz-transform: translateY(0);
+    }
+
+    50% {
+        -moz-transform: translateY(-10px);
+    }
+}
+
+@-o-keyframes bounce {
+
+    0%,
+    100% {
+        -o-transform: translateY(0);
+    }
+
+    50% {
+        -o-transform: translateY(-10px);
+    }
+}
+
+@keyframes bounce {
+
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-10px);
+    }
+}
+
+
+.UnselectedButton:hover {
+    animation: bounce 0.5s infinite;
+    -webkit-animation: bounce 0.5s infinite;
+    -moz-animation: bounce 0.5s infinite;
+    -o-animation: bounce 0.5s infinite;
+}
+
+
+
 .SelectedButton {
     background-image: url("./assets/button-b.png");
+}
+
+.SelectedButton:hover {
+    animation: bounce 0.5s infinite;
+    -webkit-animation: bounce 0.5s infinite;
+    -moz-animation: bounce 0.5s infinite;
+    -o-animation: bounce 0.5s infinite;
 }
