--- a/web/src/CuisineForm.module.css
+++ b/web/src/CuisineForm.module.css
@@ -82,7 +82,6 @@
 }
 
 @-webkit-keyframes bounce {
-
     0%,
     100% {
         -webkit-transform: translateY(0);
@@ -94,7 +93,6 @@
 }
 
 @-moz-keyframes bounce {
-
     0%,
     100% {
         -moz-transform: translateY(0);
@@ -106,7 +104,6 @@
 }
 
 @-o-keyframes bounce {
-
     0%,
     100% {
         -o-transform: translateY(0);
@@ -118,7 +115,6 @@
 }
 
 @keyframes bounce {
-
     0%,
     100% {
         transform: translateY(0);
@@ -128,7 +124,6 @@
         transform: translateY(-10px);
     }
 }
-
 
 .UnselectedButton:hover {
     animation: bounce 0.5s infinite;
@@ -154,7 +149,6 @@
     height: 100px;
 }
 
-
 .UnselectedButtonBig:hover {
     animation: bounce 0.5s infinite;
     -webkit-animation: bounce 0.5s infinite;
@@ -173,4 +167,34 @@
     -webkit-animation: bounce 0.5s infinite;
     -moz-animation: bounce 0.5s infinite;
     -o-animation: bounce 0.5s infinite;
+}
+
+@media only screen and (max-width: 700px) {
+    .Question {
+        top: 18%;
+        width: 100%;
+    }
+
+    .UnselectedButton,
+    .SelectedButton,
+    .UnselectedButtonBig,
+    .SelectedButtonBig {
+        width: 200px;
+        height: 66px;
+        font-size: 30px;
+    }
+
+    .Column {
+        float: left;
+        width: 50%;
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        gap: 15px;
+    }
+
+    .SelectionGroup {
+        flex-flow: row;
+        top: 55%;
+    }
 }
