--- a/web/src/DayForm.module.css
+++ b/web/src/DayForm.module.css
@@ -82,7 +82,6 @@
 }
 
 @-webkit-keyframes bounce {
-
     0%,
     100% {
         -webkit-transform: translateY(0);
@@ -94,7 +93,6 @@
 }
 
 @-moz-keyframes bounce {
-
     0%,
     100% {
         -moz-transform: translateY(0);
@@ -106,7 +104,6 @@
 }
 
 @-o-keyframes bounce {
-
     0%,
     100% {
         -o-transform: translateY(0);
@@ -118,7 +115,6 @@
 }
 
 @keyframes bounce {
-
     0%,
     100% {
         transform: translateY(0);
@@ -128,7 +124,6 @@
         transform: translateY(-10px);
     }
 }
-
 
 .UnselectedButton:hover {
     animation: bounce 0.5s infinite;
@@ -172,4 +167,20 @@
     -webkit-animation: bounce 0.5s infinite;
     -moz-animation: bounce 0.5s infinite;
     -o-animation: bounce 0.5s infinite;
+}
+
+@media only screen and (max-width: 700px) {
+    .Question {
+        top: 18%;
+        width: 95%;
+    }
+
+    .Row {
+        flex-flow: column;
+        gap: 30px;
+    }
+
+    .SelectionGroup {
+        top: 55%;
+    }
 }
