--- a/web/src/MusicForm.module.css
+++ b/web/src/MusicForm.module.css
@@ -73,7 +73,6 @@
 }
 
 @-webkit-keyframes bounce {
-
     0%,
     100% {
         -webkit-transform: translateY(0);
@@ -85,7 +84,6 @@
 }
 
 @-moz-keyframes bounce {
-
     0%,
     100% {
         -moz-transform: translateY(0);
@@ -97,7 +95,6 @@
 }
 
 @-o-keyframes bounce {
-
     0%,
     100% {
         -o-transform: translateY(0);
@@ -109,7 +106,6 @@
 }
 
 @keyframes bounce {
-
     0%,
     100% {
         transform: translateY(0);
@@ -119,7 +115,6 @@
         transform: translateY(-10px);
     }
 }
-
 
 .UnselectedButton:hover {
     animation: bounce 0.5s infinite;
@@ -137,4 +132,28 @@
     -webkit-animation: bounce 0.5s infinite;
     -moz-animation: bounce 0.5s infinite;
     -o-animation: bounce 0.5s infinite;
+}
+
+@media only screen and (max-width: 700px) {
+    .Question {
+        top: 18%;
+        width: 100%;
+    }
+
+    .UnselectedButton,
+    .SelectedButton,
+    .UnselectedButtonBig,
+    .SelectedButtonBig {
+        width: 200px;
+        height: 66px;
+        font-size: 30px;
+    }
+
+    .SelectionGroup {
+        top: 55%;
+    }
+
+    .Column {
+        width: 50%;
+    }
 }
