--- a/web/src/HobbyForm.module.css
+++ b/web/src/HobbyForm.module.css
@@ -34,7 +34,7 @@
 
 .Column {
     float: left;
-    width: 33.33%;
+    width: 50%;
     display: flex;
     flex-flow: column;
     justify-content: center;
@@ -48,7 +48,7 @@
 
 .SelectionGroup {
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     height: 75vh;
@@ -86,7 +86,6 @@
 }
 
 @-webkit-keyframes bounce {
-
     0%,
     100% {
         -webkit-transform: translateY(0);
@@ -98,7 +97,6 @@
 }
 
 @-moz-keyframes bounce {
-
     0%,
     100% {
         -moz-transform: translateY(0);
@@ -110,7 +108,6 @@
 }
 
 @-o-keyframes bounce {
-
     0%,
     100% {
         -o-transform: translateY(0);
@@ -122,7 +119,6 @@
 }
 
 @keyframes bounce {
-
     0%,
     100% {
         transform: translateY(0);
@@ -133,14 +129,12 @@
     }
 }
 
-
 .UnselectedButton:hover {
     animation: bounce 0.5s infinite;
     -webkit-animation: bounce 0.5s infinite;
     -moz-animation: bounce 0.5s infinite;
     -o-animation: bounce 0.5s infinite;
 }
-
 
 .SelectedButton {
     background-image: url("./assets/button-b.png");
@@ -166,7 +160,6 @@
     -o-animation: bounce 0.5s infinite;
 }
 
-
 .SelectedButtonBig {
     background-image: url("./assets/button-b-big.png");
     width: 400px;
@@ -178,4 +171,25 @@
     -webkit-animation: bounce 0.5s infinite;
     -moz-animation: bounce 0.5s infinite;
     -o-animation: bounce 0.5s infinite;
+}
+
+@media only screen and (max-width: 700px) {
+    .Question {
+        top: 18%;
+        width: 95%;
+    }
+
+    .UnselectedButton,
+    .SelectedButton,
+    .UnselectedButtonBig,
+    .SelectedButtonBig {
+        width: 200px;
+        height: 66px;
+        font-size: 25px;
+    }
+
+    .SelectionGroup {
+        top: 55%;
+        flex-flow: row;
+    }
 }
