--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,69 +1,120 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;1,100&display=swap");
 
+html {
+    width: 100vw;
+    overflow: hidden;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background: #f5f5f5;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+        "Helvetica Neue", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background: #f5f5f5;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+        monospace;
 }
 
 textarea {
-  resize: none;
+    resize: none;
 }
 
 .Title {
-  position: absolute;
-  left: 3.26%;
-  padding: 0%;
-  margin: 0%;
+    position: absolute;
+    left: 3.26%;
+    padding: 0%;
+    margin: 0%;
 
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 64px;
-  line-height: 78px;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 64px;
+    line-height: 78px;
 
-  color: #739cfa;
+    color: #739cfa;
+    z-index: 10;
 }
 
 .BLeft {
-  position: absolute;
-  left: 0px;
-  bottom: 0px;
-  width: 450px;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    width: 450px;
+    z-index: 1;
 }
 
 .BRight {
-  position: absolute;
-  right: 0px;
-  bottom: 0px;
-  width: 200px;
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    width: 200px;
+    z-index: 1;
 }
 
 .TRight {
-  position: absolute;
-  right: 0px;
-  top: 0px;
-  width: 300px;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    width: 300px;
+    z-index: 1;
+}
+
+.text_bcg {
+    position: absolute;
+    bottom: -15%;
+    z-index: -1;
+    transform: translate(-50%, -50%);
 }
 
 .mainLink {
-  height: 80vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    /* height: 80vh; */
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
 
-  font-family: "Montserrat";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 32px;
-  line-height: 78px;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 78px;
+}
+
+.myText {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+
+    z-index: 100;
+}
+
+@media only screen and (max-width: 700px) {
+    .BLeft {
+        width: 300px;
+    }
+
+    .BRight {
+    }
+
+    .TRight {
+        width: 150px;
+    }
+
+    .text_bcg {
+        visibility: hidden;
+    }
+
+    .Title {
+        top: 8%;
+        left: 50%;
+        font-size: 38px;
+        transform: translate(-50%, -50%);
+        line-height: normal;
+        white-space: nowrap;
+    }
 }
