--- a/web/src/match.css
+++ b/web/src/match.css
@@ -1,8 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap");
 
+.wrapper {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+}
+
 .Content {
     height: 100vh;
-    padding: 0 50px;
     display: flex;
     flex-flow: column;
 }
@@ -46,4 +52,18 @@
     top: 80%;
     left: 90%;
     transform: translate(-50%, -50%);
+}
+
+@media only screen and (max-width: 700px) {
+    .LightFont {
+        font-size: 10vw;
+    }
+
+    .ArrowL {
+        top: 92%;
+    }
+
+    .ArrowR {
+        top: 92%;
+    }
 }
